syntax = "proto3";
option go_package = "msgProto/MSG_Login";
package MSG_Login;

// add by stefanchen 
// server 
enum SUBMSG
{
    Begin = 0; //起点消息
    
    CS_UserBind = 1; //用户绑定请求
    SC_UserBind = 2; //用户绑定回复

    CS_UserRegister = 3; //注册请求
    SC_UserRegister = 4; //注册回复

    CS_Login = 5; //用户登录请求
    SC_Login = 6; //用户登录回复

    CS_Logout = 7; //用户登出请求
    SC_Logout = 8; //用户登出回复

    CS_Certificate = 9; //用户认证请求
    SC_Certificate = 10; //用户认证回复
}

enum ErrorCode
{
    Invalid = 0; //非法数据
    Success = 1; //成功
    Fail = 2; //失败
    UserNotExistOrPasswdErr = 3; //用户名或者密码错误
}

//CS_UserBind
message CS_UserBind_Req
{
    string Account = 1; //名字
    string Passwd = 2; //密码（做加密处理存数据库）
}

//CS_UserRegister
message CS_UserRegister_Req
{
    string Account = 1; //名字
    string Passwd = 2; //密码（做加密处理存数据库）
    string DeviceSerial = 3; //设备号
    string DeviceName = 4; //设备名
}

//SC_UserRegister
message SC_UserRegister_Rsp
{
    ErrorCode Ret = 1; //错误码
}

//CS_Login
message CS_Login_Req
{
    string Account = 1; //名字
    string Passwd = 2; //密码（做加密处理存数据库）
    string DeviceSerial = 3; //设备号
    string DeviceName = 4; //设备名
}

//SC_Login
message SC_Login_Rsp
{
    ErrorCode Ret = 1; //返回码
}
