syntax = "proto3";
option go_package = "msgProto/MSG_Server";
package MSG_Server;

// add by stefanchen 
// server 
enum SUBMSG
{
    Begin = 0; //起点消息

    CS_ServerRegister = 1; //服务器注册请求
    SC_ServerRegister = 2; //服务器注册回复
}

enum ErrorCode
{
    Invalid = 0; //非法数据
    Success = 1; //成功
    Fail = 2; //失败
}


//CS_ServerRegister
message CS_ServerRegister_Req
{
    int32 ServerType = 1; //服务器类型
    repeated uint32 Msgs = 2; //消息列表
    int32 Version = 3; //版本号
}

//SC_ServerRegister
message SC_ServerRegister_Rsp
{
    ErrorCode Ret = 1; //返回码
    string Identify = 2; //服务器标识
}