syntax = "proto3";

option go_package = "../akmessage";

import "mainID.proto";

message RpcRequest {
    RPCMSG msgId = 1;
    bytes  ReqData = 2;
}

message RpcResponse {
    bytes RespData = 1;
}

service Rpc {
    rpc Send(RpcRequest) returns(RpcResponse);
}